--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -626,3 +626,7 @@ body {
   right: 0;
   background: radial-gradient(circle at right, rgba(0, 0, 0, 0.5), transparent);
 }
+
+.ToastContainer {
+  position: fixed;
+}
